<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitCircle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sss">Example</string>
    <string name="name_exercise">Name der neuen Übung</string>
    <string name="pose_number">Pose number</string>
    <string name="name_exercise2">Exercise name</string>
    <string name="difficulty_number">Difficulty</string>
    <string name="add_topic">Add a new exercise</string>
    <string name="tool_text">Tools</string>
    <string name="tool_ball">Ball</string>
    <string name="tool_chair">Chair</string>
    <string name="tool_expander">Expander</string>
    <string name="tool_mat">Mat</string>
    <string name="button_add">Add exercise</string>
    <string name="button_Add">Add exercise</string>

</resources>
